[gd_scene load_steps=12 format=3 uid="uid://b37fefq04q7n4"]

[ext_resource type="Script" path="res://player.gd" id="1_fwxin"]
[ext_resource type="FontFile" uid="uid://be4xcsjidytqk" path="res://Anton-Regular.ttf" id="2_gsg4h"]
[ext_resource type="Texture2D" uid="uid://dndwowxoxd7r5" path="res://Bilar/SUV/suv.png" id="3_ev10f"]
[ext_resource type="Texture2D" uid="uid://cmnxq8f4vrpod" path="res://Bilar/Sedan/sedan.png" id="4_0ws74"]
[ext_resource type="Script" path="res://carSelector.gd" id="5_b2ojj"]
[ext_resource type="Texture2D" uid="uid://bof7hnopsnxuh" path="res://Bilar/Van/van.png" id="5_jxcf0"]
[ext_resource type="Script" path="res://Vehicles.gd" id="6_qu3yq"]
[ext_resource type="PackedScene" uid="uid://snurk671r3e7" path="res://Bilar/SUV/suv.tscn" id="7_ifmbk"]
[ext_resource type="PackedScene" uid="uid://roicenvbek7i" path="res://Bilar/Sedan/sedan.tscn" id="8_etxki"]
[ext_resource type="PackedScene" uid="uid://bt2bfiu7o1gni" path="res://Bilar/Van/Van.tscn" id="9_f7ymo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_276k5"]
bg_color = Color(0, 0, 0, 0.478431)
corner_radius_top_left = 40
expand_margin_left = 20.0
expand_margin_top = 10.0

[node name="Player" type="Node3D"]
process_mode = 4
script = ExtResource("1_fwxin")

[node name="camera_rotation_x" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 1, 0)

[node name="camera_rotation_y" type="Node3D" parent="camera_rotation_x"]

[node name="Camera3D" type="Camera3D" parent="camera_rotation_x/camera_rotation_y"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 4, 0, -1.74846e-07)
fov = 60.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="speed" type="Label" parent="CanvasLayer"]
custom_minimum_size = Vector2(175, 0)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -137.0
offset_top = -76.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_gsg4h")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_276k5")
text = "0 Km/h"
horizontal_alignment = 1
vertical_alignment = 1

[node name="carSelector" type="OptionButton" parent="CanvasLayer"]
z_as_relative = false
offset_left = 27.0
offset_top = 20.0
offset_right = 184.0
offset_bottom = 92.0
item_count = 3
selected = 0
popup/item_0/text = "SUV"
popup/item_0/icon = ExtResource("3_ev10f")
popup/item_0/id = 0
popup/item_1/text = "Sedan"
popup/item_1/icon = ExtResource("4_0ws74")
popup/item_1/id = 1
popup/item_2/text = "Van"
popup/item_2/icon = ExtResource("5_jxcf0")
popup/item_2/id = 2
script = ExtResource("5_b2ojj")

[node name="Vehicles" type="Node3D" parent="."]
editor_description = "The children of this node is required to follow the same order as Info.cars enum. (SUV = 0, Sedan = 1...)
update_car_variable() won't work otherwise, and the remote lobby cards will not have the correct icon for players other than themselves."
script = ExtResource("6_qu3yq")

[node name="SUV" parent="Vehicles" instance=ExtResource("7_ifmbk")]
visible = false

[node name="Sedan" parent="Vehicles" instance=ExtResource("8_etxki")]
visible = false

[node name="Van" parent="Vehicles" instance=ExtResource("9_f7ymo")]
visible = false

[connection signal="item_selected" from="CanvasLayer/carSelector" to="CanvasLayer/carSelector" method="_on_item_selected"]
